--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -10,7 +11,8 @@
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "stream-chat": "^8.47.0",
-    "stream-chat-react": "^12.8.0"
+    "stream-chat-react": "^12.8.0",
+    "universal-cookie": "^7.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
