--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.12.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
