--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router": "^7.1.1",
     "react-scripts": "5.0.1",
     "stream-chat": "^8.47.0",
