--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "cra-template": "1.2.0",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.12.0",
+    "lucide-react": "^0.474.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-fast-marquee": "^1.6.5",
